--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+
+
+ body {
+ 	background: url(<%= asset_path "pretty_background.jpe" %>) no-repeat
+ 	center fixed;
+ 	background-size: cover;
+
+
+ }
+
+ .container {
+ 	background: rgba(255,255,255,0.7);
+
+ }
